# LaTTe

./: .gitignore  CMakeLists.txt  README.md  dataset_generation_test.ipynb  package.xml  setup.py  spec-file.txt
config/: latte.yaml
launch/: latte.launch
rviz/: traj_viewer.rviz
scripts/: latte_server.py
src/: config.py  demo_user_study.py  demo_working.py  interactive.py  latte_trial.py  motion_refiner_4D.py
src/data_generator/: labels_generator.py  test_data_gen_utils.py
src/latte/: config_old.py  data_generator_script.py  demo_user_study.py  interactive.py  motion_refiner_4D.py
src/latte/data_generator/: extract_data.ipynb  labels_generator.py  read_json.py  test_data_gen.ipynb
